# VoxSmith

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VoxSmith.sln  generate_solutions.bat  imgui.ini
Resources/shaders/: raytracer_in_a_weekend.glsl  testable.glsl
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: Sandbox.cpp
VoxSmith/: CMakeLists.txt  VoxSmith.vcxproj  VoxSmith.vcxproj.filters
VoxSmith/shaders/: simple.glsl
VoxSmith/src/: VoxSmith.hpp
VoxSmith/src/VoxSmith/: Application.cpp  Application.h  Core.hpp  EntryPoint.hpp
VoxSmith/src/VoxSmith/Application/: Application.cpp  Application.hpp
VoxSmith/src/VoxSmith/Camera/: Camera.cpp  Camera.hpp
VoxSmith/src/VoxSmith/Chunk/: Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  Voxel.hpp
VoxSmith/src/VoxSmith/Event/: Event.hpp
VoxSmith/src/VoxSmith/Input/: Input.cpp  Input.hpp
VoxSmith/src/VoxSmith/Logger/: Log.cpp  Log.hpp
VoxSmith/src/VoxSmith/RayTracer/: RayTracer.cpp  RayTracer.hpp
VoxSmith/src/VoxSmith/Renderer/: Buffer.cpp  Buffer.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp
VoxSmith/src/VoxSmith/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp  ResourcesLists.hpp
VoxSmith/src/VoxSmith/Shader/: Shader.cpp  Shader.hpp
VoxSmith/src/VoxSmith/Task/: Task.hpp
VoxSmith/src/VoxSmith/Texture/: Texture.cpp  Texture.hpp
VoxSmith/src/VoxSmith/Timer/: Timestep.cpp  Timestep.hpp
VoxSmith/src/VoxSmith/UICanvasIMGUI/: UICanvasIMGUI.cpp  UICanvasIMGUI.hpp
VoxSmith/src/VoxSmith/UIImguiWrapper/: UIImguiWrapper.cpp  UIImguiWrapper.hpp
VoxSmith/src/VoxSmith/Window/: Window.cpp  Window.hpp
VoxSmith/src/VoxSmith/World/: World.cpp  World.hpp
VoxSmith/src/VoxSmith/World/HeightMap/: HeightMap.cpp  HeightMap.hpp
shaders/: chunk_outline.glsl  compute_test.glsl  greedy_mesher.gslsl.txt  mesh_basic.glsl  mesh_basic_texture.glsl  raytracer_in_a_weekend.glsl  simple.glsl  voxel_raytrace.glsl
